<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.transmontanomobile.transmontanomobile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_alarme"
        android:name="com.transmontanomobile.transmontanomobile.ui.alarme.AlarmeFragment"
        android:label="@string/title_alarme"
        tools:layout="@layout/fragment_alarme" />

    <fragment
        android:id="@+id/navigation_carteirinha"
        android:name="com.transmontanomobile.transmontanomobile.ui.carteirinha.CarteirinhaFragment"
        android:label="@string/title_carteirinha"
        tools:layout="@layout/fragment_carteirinha" />

    <fragment
        android:id="@+id/navigation_faleconosco"
        android:name="com.transmontanomobile.transmontanomobile.ui.fale_conosco.FaleConoscoFragment"
        android:label="@string/title_fale_conosco"
        tools:layout="@layout/fragment_fale_conosco" />

    <fragment
        android:id="@+id/navigation_centrosmedicos"
        android:name="com.transmontanomobile.transmontanomobile.ui.centros_medicos.CentrosMedicosFragment"
        android:label="@string/title_fale_conosco"
        tools:layout="@layout/fragment_centros_medicos" />

</navigation>