<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".ExibeCentrosMedicosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:paddingVertical="20dp"
            android:text="@string/txtCodigo"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/txtRespCodigo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:paddingVertical="20dp"
            android:text="@string/txtExemploCod"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLocalidade"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:paddingVertical="20dp"
            android:text="@string/txtLocalidade"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/txtRespLocalidade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:paddingVertical="20dp"
            android:text="@string/txtExemploLoc"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEndereco"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:paddingVertical="20dp"
            android:text="@string/txtEndereco"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/txtRespEndereco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:paddingVertical="20dp"
            android:text="@string/txtEcemploEnd"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAtendimento"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:paddingVertical="10dp"
            android:text="@string/txtAtendimento"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/txtRespAtendimento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:paddingVertical="20dp"
            android:text="@string/txtExemploAtend"
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgRespLocal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/list_icon" />

    </LinearLayout>

</LinearLayout>