<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="10dp"
                android:text="@string/nome"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/txtEndereco"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/endereco"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtSemana"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/atendimento"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtHora"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/horario"
                android:textAlignment="center" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="80dp">

                    <ImageView
                        android:id="@+id/iconeLocal"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="21dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnComoChegar"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="21dp"
                    android:text="@string/comoChegar"
                    android:padding="2dp"
                    android:background="@color/colorWhite"/>

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgLocal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/list_icon_foreground"/>
    </LinearLayout>

</LinearLayout>